добавил фильтрацию чатов
